--- a/meaning/src/App.css
+++ b/meaning/src/App.css
@@ -47,12 +47,12 @@
 }
 .NewMergeContainer:after {
   content: "";
-  width: 15em;
-  height: 15em;
+  width: 12em;
+  height: 12em;
   position: absolute;
   top: 25em;
   right: 2em;
-  background: url("./components/Assets/database-table.gif");
+  background: url("./components/Assets/d.png");
   display: inline-block;
   background-size: cover;
   z-index: 0;
